WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214327
[ iOS ] webanimations/accelerated-animation-with-easing.html is still flaky
https://bugs.webkit.org/show_bug.cgi?id=214327
Summary
[ iOS ] webanimations/accelerated-animation-with-easing.html is still flaky
Hector Lopez
Reported
2020-07-14 15:42:03 PDT
webanimations/accelerated-animation-with-easing.html It looks like after the changes in
https://trac.webkit.org/changeset/263761/webkit
is still flaky History:
https://results.webkit.org/?suite=layout-tests&test=webanimations%2Faccelerated-animation-with-easing.html
Diff:
https://build.webkit.org/results/Apple%20iOS%2013%20Simulator%20Debug%20WK2%20(Tests)/r264368%20(4689)/webanimations/accelerated-animation-with-easing-diffs.html
Attachments
Patch
(1.43 KB, patch)
2020-07-14 15:49 PDT
,
Hector Lopez
no flags
Details
Formatted Diff
Diff
Patch
(14.01 KB, patch)
2020-07-30 02:59 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-07-14 15:43:20 PDT
<
rdar://problem/65569237
>
Hector Lopez
Comment 2
2020-07-14 15:49:31 PDT
Created
attachment 404297
[details]
Patch
Truitt Savell
Comment 3
2020-07-14 15:50:54 PDT
Comment on
attachment 404297
[details]
Patch Clearing flags on attachment: 404297 Committed
r264378
: <
https://trac.webkit.org/changeset/264378
>
Alexey Proskuryakov
Comment 4
2020-07-14 22:31:46 PDT
This test was landed flaky, fix attempted in
r263761
, but it's still flaky. Difference is a vertical red line.
Antoine Quint
Comment 5
2020-07-30 02:59:55 PDT
Created
attachment 405561
[details]
Patch
Dean Jackson
Comment 6
2020-07-30 11:27:36 PDT
Comment on
attachment 405561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=405561&action=review
> Source/WebKit/ChangeLog:18 > + This fixes the test added originally in
r263506
which would only work flakily, a sympton of this
Typo: symptom.
> Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCAAnimationRemote.mm:156 > +static void encodeTimingFunction(IPC::Encoder& encoder, TimingFunction* timingFunction)
I think these methods should go in WebCoreArgumentCoders.
> Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCAAnimationRemote.mm:239 > + encodeTimingFunction(encoder, timingFunction.get());
Which would just make this encoder << timingFunction.get();
Antoine Quint
Comment 7
2020-07-30 14:51:49 PDT
Committed
r265098
: <
https://trac.webkit.org/changeset/265098
>
Simon Fraser (smfr)
Comment 8
2020-07-30 15:01:46 PDT
Comment on
attachment 405561
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=405561&action=review
>> Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCAAnimationRemote.mm:156 >> +static void encodeTimingFunction(IPC::Encoder& encoder, TimingFunction* timingFunction) > > I think these methods should go in WebCoreArgumentCoders.
This should take a const TimingFunction&
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug