[ iOS ] webanimations/accelerated-animation-with-easing.html is still flaky https://bugs.webkit.org/show_bug.cgi?id=214327 <rdar://problem/65569237>

Reviewed by Dean Jackson.

Source/WebKit:

When we fixed bug 213495 in r263506, we started calling PlatformCAAnimation::setTimingFunction()
to set the animation-wide timing function of CSS Animations and JS-originated animations alike.
However, we neglected to update PlatformCAAnimationRemote, used on iOS, to be able to handle
both animation-wide timing functions as well as keyframe-specific timing functions. This patch
adds a new "timingFunction" member to PlatformCAAnimationRemote::Properties to allow for this
and this new member is used in setTimingFunction() and copyTimingFunctionFrom(). Finally, after
the animation is decoded in the UI process, we call -[CAKeyframeAnimation setTimingFunction:]
inside addAnimationToLayer() to use this animation-wide timing function.

This fixes the test added originally in r263506 which would only work flakily, a symptom of this
missing implementation on iOS.

* WebProcess/WebPage/RemoteLayerTree/PlatformCAAnimationRemote.h:
* WebProcess/WebPage/RemoteLayerTree/PlatformCAAnimationRemote.mm:
(WebKit::encodeTimingFunction):
(WebKit::decodeTimingFunction):
(WebKit::PlatformCAAnimationRemote::Properties::encode const):
(WebKit::PlatformCAAnimationRemote::Properties::decode):
(WebKit::PlatformCAAnimationRemote::setTimingFunction):
(WebKit::PlatformCAAnimationRemote::copyTimingFunctionFrom):
(WebKit::addAnimationToLayer):
(WebKit::operator<<):

LayoutTests:

Remove the flaky expectation and remove the extra tolerance added in r263761 when it was thought that
this test was merely flaky and not completely broken on iOS as it turned out to be.

* platform/ios-wk2/TestExpectations:
* webanimations/accelerated-animation-with-easing.html:

Canonical link: https://commits.webkit.org/227798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265098 268f45cc-cd09-0410-ab3c-d52691b4dbfc